Feat: Swagger 설정 Authentication 에 Bearer Prefix 자동 추가